Fix vertical alignment of first hub-btn-link button

--- a/src/content/css/content.less
+++ b/src/content/css/content.less
@@ -141,7 +141,7 @@
 
         .content-footer-left {
             .hub-btn-link:first-child {
-                margin-left: -5px;
+                margin-left: -8px;
             }
         }
 
